[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inject"
version = "0.0.1"
description = "A depedency injection framework for Python projects"
readme = "README.md"
authors = [{ name = "Khaled Adrani", email = "khaledadrani@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["dependency", "injection", "software"]
dependencies = [
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [ "pytest", "pip-tools"]

[project.urls]
Homepage = "https://github.com/khaledadrani/inject"